# prospect_public

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
.github/workflows/: deploy_doc.yml  upload_pypi.yml
doc/: Makefile  conf.py  index.rst  installation.rst
doc/examples/: example_cobaya.rst  example_montepython.rst  example_toy.rst  examples.rst
doc/publish/: README.md  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
input/: debug.yaml  explanatory.yaml  kernel_gauss.yaml  kernel_load_random_gauss.yaml  test.yaml  test_mpi.yaml  test_threaded.yaml
input/example_cobaya/: cobaya_input.yaml  example_cobaya.yaml
input/example_montepython/: base2018TTTEEE.param  base2018TTTEEE.yaml  example.conf  example.param  example_montepython.yaml
input/example_toy/: example_global_optimisation_toy.yaml  example_toy.yaml
input/montepython/: class.conf  classpp.conf  debug_montepython.yaml  debug_montepython_mpi.yaml  h.bestfit  h.covmat
input/profile/: debug_profile.yaml
prospect/: analysis.py  communication.py  input.py  io.py  kernel.py  mcmc.py  optimiser.py  optimizer.py  profile.py  prospect.py  run.py  sampling.py  tasks.py
prospect/kernels/: analytical_kernel.py  base_kernel.py  cobaya_kernel.py  initialisation.py  initialise.py  montepython_kernel.py
prospect/tasks/: analyse_global_optimisation_task.py  analyse_profile_task.py  (+7 more)
test/: debug.py  debug_analyse_mcmc.py  debug_analyse_profile.py  debug_global_optimisation_toy.py  debug_montepython.py  debug_profile.py  debug_reanneal.py  debug_resume.py
(+61 files in other folders)
